--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<section id="header">
 			<header>
 				<span class="image avatar"><img src="images/master_gopher.png" alt="" /></span>
-				<h1 id="logo"><a href="#">Sumin Ryu</a></h1>
-				<p>I'm an undergraduate at<br/>
-				Chung-Ang University @ Industrial Security</p>
+				<h1 id="logo"><a href="#">Sunghwan Park</a></h1>
+				<p>I'm an instructor for<br />
+				CompNet@CAU in 2025 fall semester</p>
 			</header>
 			<nav id="nav">
 				<ul>
@@ -30,9 +30,9 @@
 			</nav>
 			<footer>
 				<ul class="icons">
-					<li><a href="https://velog.io/@sumin1020/posts" class="icon brands fa-youtube" target="_blank"><span class="label">Velog</span></a></li>
-					<li><a href="https://github.com/susuu-m6" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
-					<li><a href="cocos10200@naver.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://www.youtube.com/@sunghwan" class="icon brands fa-youtube" target="_blank"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/tjdghks994" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+					<li><a href="mailto:tjdghks994@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 			</footer>
 		</section>
@@ -58,7 +58,7 @@
 				<!-- Two -->
 				<section id="two">
 					<div class="container">
-						<h3>Things I Do but I don't want to do</h3>
+						<h3>Things I Do</h3>
 						<p> These are the things I usually do in our lab </p>
 						<ul class="feature-icons">
 							<li class="icon solid fa-book">Read research papers</li>
