--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<section id="header">
 			<header>
 				<span class="image avatar"><img src="images/master_gopher.png" alt="" /></span>
-				<h1 id="logo"><a href="#">Sunghwan Park</a></h1>
-				<p>I'm an instructor for<br />
-				CompNet@CAU in 2025 fall semester</p>
+				<h1 id="logo"><a href="#">Sumin Ryu</a></h1>
+				<p>I'm a student of CAU IS<br />
+				</p>
 			</header>
 			<nav id="nav">
 				<ul>
